fixed overflow issues

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
   margin: 0;
   padding: 0;
 }
+html,
+body {
+  overflow-x: hidden;
+}
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
@@ -82,6 +86,7 @@ h4 {
   background: white;
   position: fixed;
   z-index: 10000;
+  box-shadow: 0px 10px 10px -8px rgba(0, 0, 0, 0.014);
 }
 header {
   display: flex;
